# opds_jni

./: .gitignore  Cargo.toml  Makefile  README.md
java/: Author.java  Book.java  Main.java  Serie.java  Value.java  Wrapper.java
org/opds/api/jni/: Wrapper.java
org/opds/api/models/: Author.java  Book.java  Pair.java  Serie.java  Value.java
org/opds/api/tests/: Main.java
src/: lib.rs  result.rs
